--- a/server/djangoapp/templates/djangoapp/registration.html
+++ b/server/djangoapp/templates/djangoapp/registration.html
@@ -26,7 +26,7 @@
                   {{ message }}
               </div>
               {% endif %}
-              <button class="btn btn-primary" type="submit">Sign up</button> <!--Style button with .btn and .btn-primary class -->
+              <button class="btn btn-primary mt-4" type="submit">Sign up</button> <!--Style button with .btn and .btn-primary class -->
           </div>
         </div>
     </form>
